--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CoordinadoraApp"
         tools:targetApi="31">
-        <activity
-            android:name=".ui.MainActivity"
+        <activity android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.MainActivity" />
     </application>
 
 </manifest>
