se agrega la api de maps con sus respectivas clses

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         android:theme="@style/Theme.CoordinadoraApp"
         tools:targetApi="31">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyANinpOeQVYvwLI9xeX-CgaOpSBstzud0w" />
+
         <activity
             android:name=".ui.launcher.LauncherActivity"
             android:exported="true"
